--- a/css/header.css
+++ b/css/header.css
@@ -53,19 +53,10 @@ body{
 
 .userProfile{
     width:100px;
-    height:100px;
-    background-image: url("../img/sloth.webp");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: white;
-    border-radius: 50%;
+    height:fit-content;
     cursor: pointer;
 }
 
-.userProfile:hover{
-    box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.8);
-}
 
 a{
     text-decoration: inherit;
