--- a/css/login.css
+++ b/css/login.css
@@ -44,7 +44,7 @@ form > div{
     align-items: center;
 }
 
-input[type="text"]{
+input{
     font-size: 15px;
     border-radius: 10px;
     outline: none;
